<Tyler> Adding navigation and some of the internal home page

--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,4 +1,4 @@
-<p> Here is the data </p>
+<div class="toolbar"></div>
 <p> {{ tokenParam?.access_token }} </p>
 <table>
   <tr *ngFor="let client of ClientArr">
