--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-navigation-bar></app-navigation-bar>
-<div style="width:94%; margin:auto; margin-top:80px">
+<!-- <div style="width:94%; margin:auto; margin-top:80px"> -->
 <router-outlet></router-outlet>
-</div>
+<!-- </div> -->
