--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -1,5 +1,5 @@
 <nav class="topnav navbar navbar-expand-lg fixed-top" id="myTopnav">
-  <a id="logoNavBtn" routerLink="test"><span id="spanSD"><b>SD</b></span><span id="span360"><b>360</b></span></a>
+  <a id="logoNavBtn" routerLink="homepage"><span id="spanSD"><b>SD</b></span><span id="span360"><b>360</b></span></a>
   <button class="navbar-toggler active" id="navBarToggleBtn" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <i class="fa fa-bars"></i>
   </button>
@@ -7,7 +7,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent" >
     <ul class="navbar-nav mr-auto">
       <li class="nav-item mainNavItem">
-        <button routerLink="pagenotfound" class="btn navbarBtn">Home</button>
+        <button routerLink="returns" class="btn navbarBtn">Home</button>
         <!-- <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> -->
       </li>
       <li class="nav-item mainNavItem">
