--- a/src/app/returns/returns.component.html
+++ b/src/app/returns/returns.component.html
@@ -1,7 +1,7 @@
 
 <h1 style="margin-top:50px">{{ RootReturns?.Client }}</h1>
 <app-mailtype-returns [MailTypeList]="RootReturns?.MailTypeList"></app-mailtype-returns>
-<table >
+<table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%">
   <tr>
     <td>{{ RootReturns?.Client }}</td>
     <td>{{ RootReturns?.Measure.Mailed | date: 'MM/dd/yy'}}</td>
