--- a/src/app/mailtype-returns/mailtype-returns.component.html
+++ b/src/app/mailtype-returns/mailtype-returns.component.html
@@ -1,5 +1,28 @@
-<table style="margin-top:10px">
+<table class="table mailTypeTable table-striped table-bordered" cellspacing="0" width="100%">
+  <thead class='mailTypeTableHeader' style='text-decoration: underline;'>
+    <tr>
+        <th></th>
+        <th>Mail Type</th>
+        <th>Mailed</th>
+        <th>Caged</th>
+        <th>Quantity</th>
+        <th>Donors</th>
+        <th>NonDonors</th>
+        <th>NewDonors</th>
+        <th>RSP</th>
+        <th>AVG</th>
+        <th>Gross</th>
+        <th>Cost</th>
+        <th>Net</th>
+        <th>GPP</th>
+        <th>CLM</th>
+        <th>NLM</th>
+        <th>IO</th>
+    </tr>
+  </thead>
+  <tbody>
     <tr *ngFor="let mailType of MailTypeList">
+      <td id='mailTypeDropdownBtn' class='btnCol details-control btn btn-sm btn-primary glyphicon glyphicon-menu-hamburger'></td>
       <td>{{ mailType?.MailType }}</td>
       <td>{{ mailType?.Measure.Mailed | date: 'MM/dd/yy'}}</td>
       <td>{{ mailType?.Measure.Caged | date: 'MM/dd/yy' }}</td>
@@ -17,4 +40,5 @@
       <td>{{ mailType?.Measure.NLM | number : '1.0-2' }}</td>
       <td>{{ mailType?.Measure.IO | number : '1.0-2' }}</td>
     </tr>
-  </table>
+  </tbody>
+</table>
