--- a/src/app/returns/returns.component.html
+++ b/src/app/returns/returns.component.html
@@ -50,6 +50,9 @@
     <app-mailtype-returns [RootReturns]="RootReturns" [MailTypeList]="RootReturns.MailTypeList" title="{{ RootReturns.Client }}"></app-mailtype-returns>
     <ng-container *ngFor="let mailType of RootReturns.MailTypeList">
       <app-campaign-returns [MailType]="mailType" [CampaignList]="mailType.CampaignList" title="{{ mailType.MailType }}"></app-campaign-returns>
+      <ng-container *ngFor="let campaign of mailType.CampaignList">
+        <app-phase-returns [Campaign]="campaign" [PhaseList]="campaign.PhaseList" title="{{ campaign.CampaignName }}"></app-phase-returns>
+      </ng-container>
     </ng-container>
   </div>
 </div>
