--- a/src/app/campaign-returns/campaign-returns.component.html
+++ b/src/app/campaign-returns/campaign-returns.component.html
@@ -22,8 +22,7 @@
   </thead>
   <tbody>
     <tr *ngFor="let campaign of CampaignList">
-      <td class='btnCol details-control btn btn-sm btn-primary glyphicon glyphicon-menu-hamburger'>
-      </td>
+      <td class='btnCol cdetails-control btn btn-sm btn-primary glyphicon glyphicon-menu-hamburger'></td>
       <td>{{ campaign.CampaignName }}</td>
       <td>{{ campaign.Measure.Mailed | date: 'MM/dd/yy'}}</td>
       <td>{{ campaign.Measure.Caged | date: 'MM/dd/yy' }}</td>
