--- a/src/app/mailtype-returns/mailtype-returns.component.html
+++ b/src/app/mailtype-returns/mailtype-returns.component.html
@@ -22,7 +22,7 @@
   </thead>
   <tbody>
     <tr *ngFor="let mailType of MailTypeList">
-      <td class='btnCol details-control btn btn-sm btn-primary glyphicon glyphicon-menu-hamburger'></td>
+      <td class='btnCol mdetails-control btn btn-sm btn-primary glyphicon glyphicon-menu-hamburger'></td>
       <td>{{ mailType.MailType }}</td>
       <td>{{ mailType.Measure.Mailed | date: 'MM/dd/yy'}}</td>
       <td>{{ mailType.Measure.Caged | date: 'MM/dd/yy' }}</td>
@@ -43,7 +43,7 @@
   </tbody>
   <tfoot class='clientTableFooter'>
     <tr>
-      <td colspan="2">TOTAL {{ RootReturns.Client | uppercase }}</td>
+      <td colspan="2">TOTAL {{ RootReturns?.Client | uppercase }}</td>
       <td>{{ RootReturns.Measure.Mailed | date: 'MM/dd/yy'}}</td>
       <td>{{ RootReturns.Measure.Caged | date: 'MM/dd/yy' }}</td>
       <td>{{ RootReturns.Measure.Quantity | number : '1.0-0' }}</td>
