--- a/src/app/phase-returns/phase-returns.component.html
+++ b/src/app/phase-returns/phase-returns.component.html
@@ -22,7 +22,7 @@
   </thead>
   <tbody>
     <tr *ngFor="let phase of PhaseList">
-      <td class='btnCol details-control btn btn-sm btn-primary glyphicon glyphicon-menu-hamburger'>
+      <td class='btnCol pdetails-control btn btn-sm btn-primary glyphicon glyphicon-menu-hamburger'>
       </td>
       <td>{{ phase.PhaseName }}</td>
       <td>{{ phase.Measure.Mailed | date: 'MM/dd/yy'}}</td>
