--- a/src/app/returns/returns.component.html
+++ b/src/app/returns/returns.component.html
@@ -1,4 +1,3 @@
-<div id="returnsDiv" class="slider">
   <h1>
     {{ RootReturns?.Client | uppercase }}</h1>
   <table class="table clientTable table-striped table-bordered" cellspacing="0" width="100%">
@@ -27,32 +26,34 @@
       <tr>
         <td class='btnCol details-control btn btn-sm btn-primary glyphicon glyphicon-menu-hamburger'>
         </td>
-        <td>{{ RootReturns.Client | uppercase }}</td>
-        <td>{{ RootReturns.Measure.Mailed | date: 'MM/dd/yy'}}</td>
-        <td>{{ RootReturns.Measure.Caged | date: 'MM/dd/yy' }}</td>
-        <td>{{ RootReturns.Measure.Quantity | number : '1.0-0' }}</td>
-        <td>{{ RootReturns.Measure.Donors | number : '1.0-0' }}</td>
-        <td>{{ RootReturns.Measure.NonDonors | number : '1.0-0' }}</td>
-        <td>{{ RootReturns.Measure.NewDonors | number : '1.0-0' }}</td>
-        <td>{{ RootReturns.Measure.RSP | percent:'1.2-2'}}</td>
-        <td>{{ RootReturns.Measure.AVG | number : '1.0-2' }}</td>
-        <td>{{ RootReturns.Measure.Gross | number : '1.0-0' }}</td>
-        <td>{{ RootReturns.Measure.Cost | number : '1.0-0' }}</td>
-        <td>{{ RootReturns.Measure.Net | number : '1.0-0' }}</td>
-        <td>{{ RootReturns.Measure.GPP | number : '1.0-2' }}</td>
-        <td>{{ RootReturns.Measure.CLM | number : '1.0-2' }}</td>
-        <td>{{ RootReturns.Measure.NLM | number : '1.0-2' }}</td>
-        <td>{{ RootReturns.Measure.IO | number : '1.0-2' }}</td>
+        <td>{{ RootReturns?.Client | uppercase }}</td>
+        <td>{{ RootReturns?.Measure.Mailed | date: 'MM/dd/yy'}}</td>
+        <td>{{ RootReturns?.Measure.Caged | date: 'MM/dd/yy' }}</td>
+        <td>{{ RootReturns?.Measure.Quantity | number : '1.0-0' }}</td>
+        <td>{{ RootReturns?.Measure.Donors | number : '1.0-0' }}</td>
+        <td>{{ RootReturns?.Measure.NonDonors | number : '1.0-0' }}</td>
+        <td>{{ RootReturns?.Measure.NewDonors | number : '1.0-0' }}</td>
+        <td>{{ RootReturns?.Measure.RSP | percent:'1.2-2'}}</td>
+        <td>{{ RootReturns?.Measure.AVG | number : '1.0-2' }}</td>
+        <td>{{ RootReturns?.Measure.Gross | number : '1.0-0' }}</td>
+        <td>{{ RootReturns?.Measure.Cost | number : '1.0-0' }}</td>
+        <td>{{ RootReturns?.Measure.Net | number : '1.0-0' }}</td>
+        <td>{{ RootReturns?.Measure.GPP | number : '1.0-2' }}</td>
+        <td>{{ RootReturns?.Measure.CLM | number : '1.0-2' }}</td>
+        <td>{{ RootReturns?.Measure.NLM | number : '1.0-2' }}</td>
+        <td>{{ RootReturns?.Measure.IO | number : '1.0-2' }}</td>
       </tr>
     </tbody>
   </table>
-  <div style="visibility: hidden">
-    <app-mailtype-returns [RootReturns]="RootReturns" [MailTypeList]="RootReturns.MailTypeList" title="{{ RootReturns.Client }}"></app-mailtype-returns>
-    <ng-container *ngFor="let mailType of RootReturns.MailTypeList">
+  <div style="visibility: collapse">
+    <app-mailtype-returns [RootReturns]="RootReturns" [MailTypeList]="RootReturns?.MailTypeList" title="{{ RootReturns?.Client }}"></app-mailtype-returns>
+    <div *ngFor="let mailType of RootReturns.MailTypeList">
       <app-campaign-returns [MailType]="mailType" [CampaignList]="mailType.CampaignList" title="{{ mailType.MailType }}"></app-campaign-returns>
       <ng-container *ngFor="let campaign of mailType.CampaignList">
         <app-phase-returns [Campaign]="campaign" [PhaseList]="campaign.PhaseList" title="{{ campaign.CampaignName }}"></app-phase-returns>
+        <ng-container *ngFor="let phase of campaign.PhaseList">
+          <app-maillist-returns [Phase]="phase" [MailList]="phase.MailList" title="{{ phase.PhaseName }}"></app-maillist-returns>
+        </ng-container>        
       </ng-container>
-    </ng-container>
+    </div>
   </div>
-</div>
