--- a/src/app/mailtype-returns/mailtype-returns.component.html
+++ b/src/app/mailtype-returns/mailtype-returns.component.html
@@ -23,42 +23,42 @@
   <tbody>
     <tr *ngFor="let mailType of MailTypeList">
       <td class='btnCol mdetails-control btn btn-sm btn-primary glyphicon glyphicon-menu-hamburger'></td>
-      <td>{{ mailType.MailType }}</td>
-      <td>{{ mailType.Measure.Mailed | date: 'MM/dd/yy'}}</td>
-      <td>{{ mailType.Measure.Caged | date: 'MM/dd/yy' }}</td>
-      <td>{{ mailType.Measure.Quantity | number : '1.0-0' }}</td>
-      <td>{{ mailType.Measure.Donors | number : '1.0-0' }}</td>
-      <td>{{ mailType.Measure.NonDonors | number : '1.0-0' }}</td>
-      <td>{{ mailType.Measure.NewDonors | number : '1.0-0' }}</td>
-      <td>{{ mailType.Measure.RSP | percent:'1.2-2'}}</td>
-      <td>{{ mailType.Measure.AVG | number : '1.0-2' }}</td>
-      <td>{{ mailType.Measure.Gross | number : '1.0-0' }}</td>
-      <td>{{ mailType.Measure.Cost | number : '1.0-0' }}</td>
-      <td>{{ mailType.Measure.Net | number : '1.0-0' }}</td>
-      <td>{{ mailType.Measure.GPP | number : '1.0-2' }}</td>
-      <td>{{ mailType.Measure.CLM | number : '1.0-2' }}</td>
-      <td>{{ mailType.Measure.NLM | number : '1.0-2' }}</td>
-      <td>{{ mailType.Measure.IO | number : '1.0-2' }}</td>
+      <td>{{ mailType?.MailType }}</td>
+      <td>{{ mailType?.Measure.Mailed | date: 'MM/dd/yy'}}</td>
+      <td>{{ mailType?.Measure.Caged | date: 'MM/dd/yy' }}</td>
+      <td>{{ mailType?.Measure.Quantity | number : '1.0-0' }}</td>
+      <td>{{ mailType?.Measure.Donors | number : '1.0-0' }}</td>
+      <td>{{ mailType?.Measure.NonDonors | number : '1.0-0' }}</td>
+      <td>{{ mailType?.Measure.NewDonors | number : '1.0-0' }}</td>
+      <td>{{ mailType?.Measure.RSP | percent:'1.2-2'}}</td>
+      <td>{{ mailType?.Measure.AVG | number : '1.0-2' }}</td>
+      <td>{{ mailType?.Measure.Gross | number : '1.0-0' }}</td>
+      <td>{{ mailType?.Measure.Cost | number : '1.0-0' }}</td>
+      <td>{{ mailType?.Measure.Net | number : '1.0-0' }}</td>
+      <td>{{ mailType?.Measure.GPP | number : '1.0-2' }}</td>
+      <td>{{ mailType?.Measure.CLM | number : '1.0-2' }}</td>
+      <td>{{ mailType?.Measure.NLM | number : '1.0-2' }}</td>
+      <td>{{ mailType?.Measure.IO | number : '1.0-2' }}</td>
     </tr>
   </tbody>
   <tfoot class='clientTableFooter'>
     <tr>
       <td colspan="2">TOTAL {{ RootReturns?.Client | uppercase }}</td>
-      <td>{{ RootReturns.Measure.Mailed | date: 'MM/dd/yy'}}</td>
-      <td>{{ RootReturns.Measure.Caged | date: 'MM/dd/yy' }}</td>
-      <td>{{ RootReturns.Measure.Quantity | number : '1.0-0' }}</td>
-      <td>{{ RootReturns.Measure.Donors | number : '1.0-0' }}</td>
-      <td>{{ RootReturns.Measure.NonDonors | number : '1.0-0' }}</td>
-      <td>{{ RootReturns.Measure.NewDonors | number : '1.0-0' }}</td>
-      <td>{{ RootReturns.Measure.RSP | percent:'1.2-2'}}</td>
-      <td>{{ RootReturns.Measure.AVG | number : '1.0-2' }}</td>
-      <td>{{ RootReturns.Measure.Gross | number : '1.0-0' }}</td>
-      <td>{{ RootReturns.Measure.Cost | number : '1.0-0' }}</td>
-      <td>{{ RootReturns.Measure.Net | number : '1.0-0' }}</td>
-      <td>{{ RootReturns.Measure.GPP | number : '1.0-2' }}</td>
-      <td>{{ RootReturns.Measure.CLM | number : '1.0-2' }}</td>
-      <td>{{ RootReturns.Measure.NLM | number : '1.0-2' }}</td>
-      <td>{{ RootReturns.Measure.IO | number : '1.0-2' }}</td>
+      <td>{{ RootReturns?.Measure.Mailed | date: 'MM/dd/yy'}}</td>
+      <td>{{ RootReturns?.Measure.Caged | date: 'MM/dd/yy' }}</td>
+      <td>{{ RootReturns?.Measure.Quantity | number : '1.0-0' }}</td>
+      <td>{{ RootReturns?.Measure.Donors | number : '1.0-0' }}</td>
+      <td>{{ RootReturns?.Measure.NonDonors | number : '1.0-0' }}</td>
+      <td>{{ RootReturns?.Measure.NewDonors | number : '1.0-0' }}</td>
+      <td>{{ RootReturns?.Measure.RSP | percent:'1.2-2'}}</td>
+      <td>{{ RootReturns?.Measure.AVG | number : '1.0-2' }}</td>
+      <td>{{ RootReturns?.Measure.Gross | number : '1.0-0' }}</td>
+      <td>{{ RootReturns?.Measure.Cost | number : '1.0-0' }}</td>
+      <td>{{ RootReturns?.Measure.Net | number : '1.0-0' }}</td>
+      <td>{{ RootReturns?.Measure.GPP | number : '1.0-2' }}</td>
+      <td>{{ RootReturns?.Measure.CLM | number : '1.0-2' }}</td>
+      <td>{{ RootReturns?.Measure.NLM | number : '1.0-2' }}</td>
+      <td>{{ RootReturns?.Measure.IO | number : '1.0-2' }}</td>
     </tr>
   </tfoot>
 </table>
