--- a/src/app/phase-returns/phase-returns.component.html
+++ b/src/app/phase-returns/phase-returns.component.html
@@ -24,42 +24,42 @@
     <tr *ngFor="let phase of PhaseList">
       <td class='btnCol pdetails-control btn btn-sm btn-primary glyphicon glyphicon-menu-hamburger'>
       </td>
-      <td>{{ phase.PhaseName }}</td>
-      <td>{{ phase.Measure.Mailed | date: 'MM/dd/yy'}}</td>
-      <td>{{ phase.Measure.Caged | date: 'MM/dd/yy' }}</td>
-      <td>{{ phase.Measure.Quantity | number : '1.0-0' }}</td>
-      <td>{{ phase.Measure.Donors | number : '1.0-0' }}</td>
-      <td>{{ phase.Measure.NonDonors | number : '1.0-0' }}</td>
-      <td>{{ phase.Measure.NewDonors | number : '1.0-0' }}</td>
-      <td>{{ phase.Measure.RSP | percent:'1.2-2'}}</td>
-      <td>{{ phase.Measure.AVG | number : '1.0-2' }}</td>
-      <td>{{ phase.Measure.Gross | number : '1.0-0' }}</td>
-      <td>{{ phase.Measure.Cost | number : '1.0-0' }}</td>
-      <td>{{ phase.Measure.Net | number : '1.0-0' }}</td>
-      <td>{{ phase.Measure.GPP | number : '1.0-2' }}</td>
-      <td>{{ phase.Measure.CLM | number : '1.0-2' }}</td>
-      <td>{{ phase.Measure.NLM | number : '1.0-2' }}</td>
-      <td>{{ phase.Measure.IO | number : '1.0-2' }}</td>
+      <td>{{ phase?.PhaseName }}</td>
+      <td>{{ phase?.Measure.Mailed | date: 'MM/dd/yy'}}</td>
+      <td>{{ phase?.Measure.Caged | date: 'MM/dd/yy' }}</td>
+      <td>{{ phase?.Measure.Quantity | number : '1.0-0' }}</td>
+      <td>{{ phase?.Measure.Donors | number : '1.0-0' }}</td>
+      <td>{{ phase?.Measure.NonDonors | number : '1.0-0' }}</td>
+      <td>{{ phase?.Measure.NewDonors | number : '1.0-0' }}</td>
+      <td>{{ phase?.Measure.RSP | percent:'1.2-2'}}</td>
+      <td>{{ phase?.Measure.AVG | number : '1.0-2' }}</td>
+      <td>{{ phase?.Measure.Gross | number : '1.0-0' }}</td>
+      <td>{{ phase?.Measure.Cost | number : '1.0-0' }}</td>
+      <td>{{ phase?.Measure.Net | number : '1.0-0' }}</td>
+      <td>{{ phase?.Measure.GPP | number : '1.0-2' }}</td>
+      <td>{{ phase?.Measure.CLM | number : '1.0-2' }}</td>
+      <td>{{ phase?.Measure.NLM | number : '1.0-2' }}</td>
+      <td>{{ phase?.Measure.IO | number : '1.0-2' }}</td>
     </tr>
   </tbody>
   <tfoot class='campaignTableFooter'>
     <tr>
-      <td colspan="2">TOTAL {{ Campaign.CampaignName | uppercase }}</td>
-      <td>{{ Campaign.Measure.Mailed | date: 'MM/dd/yy'}}</td>
-      <td>{{ Campaign.Measure.Caged | date: 'MM/dd/yy' }}</td>
-      <td>{{ Campaign.Measure.Quantity | number : '1.0-0' }}</td>
-      <td>{{ Campaign.Measure.Donors | number : '1.0-0' }}</td>
-      <td>{{ Campaign.Measure.NonDonors | number : '1.0-0' }}</td>
-      <td>{{ Campaign.Measure.NewDonors | number : '1.0-0' }}</td>
-      <td>{{ Campaign.Measure.RSP | percent:'1.2-2'}}</td>
-      <td>{{ Campaign.Measure.AVG | number : '1.0-2' }}</td>
-      <td>{{ Campaign.Measure.Gross | number : '1.0-0' }}</td>
-      <td>{{ Campaign.Measure.Cost | number : '1.0-0' }}</td>
-      <td>{{ Campaign.Measure.Net | number : '1.0-0' }}</td>
-      <td>{{ Campaign.Measure.GPP | number : '1.0-2' }}</td>
-      <td>{{ Campaign.Measure.CLM | number : '1.0-2' }}</td>
-      <td>{{ Campaign.Measure.NLM | number : '1.0-2' }}</td>
-      <td>{{ Campaign.Measure.IO | number : '1.0-2' }}</td>
+      <td colspan="2">TOTAL {{ Campaign?.CampaignName | uppercase }}</td>
+      <td>{{ Campaign?.Measure.Mailed | date: 'MM/dd/yy'}}</td>
+      <td>{{ Campaign?.Measure.Caged | date: 'MM/dd/yy' }}</td>
+      <td>{{ Campaign?.Measure.Quantity | number : '1.0-0' }}</td>
+      <td>{{ Campaign?.Measure.Donors | number : '1.0-0' }}</td>
+      <td>{{ Campaign?.Measure.NonDonors | number : '1.0-0' }}</td>
+      <td>{{ Campaign?.Measure.NewDonors | number : '1.0-0' }}</td>
+      <td>{{ Campaign?.Measure.RSP | percent:'1.2-2'}}</td>
+      <td>{{ Campaign?.Measure.AVG | number : '1.0-2' }}</td>
+      <td>{{ Campaign?.Measure.Gross | number : '1.0-0' }}</td>
+      <td>{{ Campaign?.Measure.Cost | number : '1.0-0' }}</td>
+      <td>{{ Campaign?.Measure.Net | number : '1.0-0' }}</td>
+      <td>{{ Campaign?.Measure.GPP | number : '1.0-2' }}</td>
+      <td>{{ Campaign?.Measure.CLM | number : '1.0-2' }}</td>
+      <td>{{ Campaign?.Measure.NLM | number : '1.0-2' }}</td>
+      <td>{{ Campaign?.Measure.IO | number : '1.0-2' }}</td>
     </tr>
   </tfoot> 
 </table>
