lots of changes

--- a/src/app/maillist-returns/maillist-returns.component.html
+++ b/src/app/maillist-returns/maillist-returns.component.html
@@ -7,8 +7,8 @@
       <th>Caged</th>
       <th>Quantity</th>
       <th>Donors</th>
-      <th>NonDonors</th>
-      <th>NewDonors</th>
+      <th>Non</th>
+      <th>New</th>
       <th>RSP</th>
       <th>AVG</th>
       <th>Gross</th>
