--- a/src/app/phase-returns/phase-returns.component.html
+++ b/src/app/phase-returns/phase-returns.component.html
@@ -7,8 +7,8 @@
       <th>Caged</th>
       <th>Quantity</th>
       <th>Donors</th>
-      <th>NonDonors</th>
-      <th>NewDonors</th>
+      <th>Non</th>
+      <th>New</th>
       <th>RSP</th>
       <th>AVG</th>
       <th>Gross</th>
@@ -22,7 +22,7 @@
   </thead>
   <tbody>
     <tr *ngFor="let phase of PhaseList">
-      <td class='btnCol pdetails-control btn btn-sm btn-primary glyphicon glyphicon-menu-hamburger'>
+      <td class='btnCol pdetails-control'>
       </td>
       <td>{{ phase?.PhaseName }}</td>
       <td>{{ phase?.Measure.Mailed | date: 'MM/dd/yy'}}</td>
