--- a/src/app/returns/returns.component.css
+++ b/src/app/returns/returns.component.css
@@ -122,3 +122,11 @@ table.dataTable thead th {
 ul.ui-menu {
     max-height: 250px !important;
 }
+
+td.details-control, td.mdetails-control, td.cdetails-control, td.pdetails-control {
+    background: url('../resources/details_open.png') no-repeat center center;
+    cursor: pointer;
+}
+tr.shown td.details-control,tr.shown td.mdetails-control,tr.shown td.cdetails-control,tr.shown td.pdetails-control {
+    background: url('../resources/details_close.png') no-repeat center center;
+}
