--- a/src/app/returns/returns.component.html
+++ b/src/app/returns/returns.component.html
@@ -1,5 +1,6 @@
 <h1>
   {{ RootReturns?.Client | uppercase }}</h1>
+  <div class="col-md-2"><span style="margin:5px" id='expandAllLists' class='btn btn-sm btn-outline-danger' (click)="ExpandAll()">Expand All</span><span style="margin:5px" id='collapseAllLists' class='btn btn-sm btn-outline-success' (click)="CollapseAll()">Collapse All</span></div>
 <table class="table clientTable table-striped table-bordered" cellspacing="0" width="100%">
   <thead class='clientTableHeader' style='text-decoration: underline;'>
     <tr>
@@ -9,8 +10,8 @@
       <th>Caged</th>
       <th>Quantity</th>
       <th>Donors</th>
-      <th>NonDonors</th>
-      <th>NewDonors</th>
+      <th>Non</th>
+      <th>New</th>
       <th>RSP</th>
       <th>AVG</th>
       <th>Gross</th>
@@ -24,7 +25,7 @@
   </thead>
   <tbody>
     <tr>
-      <td class='btnCol details-control btn btn-sm btn-primary glyphicon glyphicon-menu-hamburger'>
+      <td class='btnCol details-control'>
       </td>
       <td>{{ RootReturns?.Client | uppercase }}</td>
       <td>{{ RootReturns?.Measure.Mailed | date: 'MM/dd/yy'}}</td>
