--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -7,7 +7,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent" >
     <ul class="navbar-nav mr-auto">
       <li class="nav-item mainNavItem">
-        <button routerLink="returns" class="btn navbarBtn">Home</button>
+        <button routerLink="returns/AMAC" class="btn navbarBtn">Home</button>
         <!-- <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> -->
       </li>
       <li class="nav-item mainNavItem">
