<Tyler> Style changes to the home page

--- a/src/app/navigation-bar/navigation-bar.component.css
+++ b/src/app/navigation-bar/navigation-bar.component.css
@@ -75,7 +75,7 @@
  }
 
  .navbarDropdownMenu > .dropdown-item:hover{
-    background-color:#DCDCDC;
+    background-color:#F5F5F5;
  }
 /*<><><><><> HOVER END <><><><><>*/
 
