--- a/src/app/internal-home-dashboard/internal-home-dashboard.component.css
+++ b/src/app/internal-home-dashboard/internal-home-dashboard.component.css
@@ -9,11 +9,11 @@ a.active.show:hover{
     color:#1279C0 !important;
 }
 
-.mainContent{
+/* .mainContent{
     width:96%;
     background-color:white;
     margin: 0 auto;
-}
+} */
 
 .toolbar {
     width: 100%;
@@ -31,6 +31,7 @@ a.active.show:hover{
 }
 
 .dictionaryContent {
+    width:96%;
     padding-top:25px;
     margin: 0 auto;
     -moz-column-width: 25em; /*Multi-columns Firefox */
@@ -106,6 +107,11 @@ ul.dictionary li {
     font-size: 11pt;
     padding: 5px 0px 5px 5px;
     border-radius:5px;
+}
+
+ul.dictionary > li > a{
+    color:#333;
+    text-decoration: none;
 }
 
 ul.dictionary li:hover{
