--- a/src/app/internal-home-dashboard/internal-home-dashboard.component.html
+++ b/src/app/internal-home-dashboard/internal-home-dashboard.component.html
@@ -165,19 +165,19 @@
       </ul> -->
     </div>
 
-<div class='mainContent'>
+<div class='dictionaryContent'>
 <ul class='dictionary'>
     <li *ngFor="let client of ClientArr" class="clientNameLI"><a routerLink='/returns/{{client?.gClientAcronym}}'>{{ client?.gClientName }}</a></li>
 </ul>
 </div>
 
-    <div class='dictionaryContent'>
+    <!-- <div class='dictionaryContent'>
       <ul class='dictionary'>
         <li *ngFor="let client of ClientArr" class="clientNameLI">
           <a #dictionaryItem>{{ client?.gClientName }}</a>
         </li>
       </ul>
-    </div>
+    </div> -->
 </div>
 
 <!-- <p> {{ tokenParam?.access_token }} </p> -->
