<Tyler> Added loading panel to returns page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-loader></app-loader>
 <app-navigation-bar></app-navigation-bar>
 <!-- <div style="width:94%; margin:auto; margin-top:80px"> -->
 <router-outlet></router-outlet>
