--- a/src/app/Returns/main-returns/main-returns.component.css
+++ b/src/app/Returns/main-returns/main-returns.component.css
@@ -1,6 +1,17 @@
-.toolbar .row > div {
-    margin-top: 5px;
+.toolbar {
+    width: 100%;
+    background-color: 	white;
+    position:fixed;
+    top:46px !important;
+    z-index: 90;
+    min-height:46px;
+    box-shadow: 0px 0px 8px 0px #686868;
 }
+
+
+/* .toolbar .row > div {
+    margin-top: 5px;
+} */
 
 
 #returnsDiv{
