--- a/src/app/Returns/main-returns/main-returns.component.html
+++ b/src/app/Returns/main-returns/main-returns.component.html
@@ -1,6 +1,11 @@
-<h1>
-  {{ RootReturns?.Client | uppercase }}</h1>
-  <div class="col-md-2"><span style="margin:5px" id='expandAllLists' class='btn btn-sm btn-outline-danger' (click)="ExpandAll()">Expand All</span><span style="margin:5px" id='collapseAllLists' class='btn btn-sm btn-outline-success' (click)="CollapseAll()">Collapse All</span></div>
+<div class="toolbar">
+<div class="col-md-2">
+    <span style="margin:5px" id='expandAllLists' class='btn btn-sm btn-outline-danger' (click)="ExpandAll()">Expand All</span>
+    <span style="margin:5px" id='collapseAllLists' class='btn btn-sm btn-outline-success' (click)="CollapseAll()">Collapse All</span>
+  </div>
+</div>
+
+  <h1 style="margin-top:100px;">{{ RootReturns?.Client | uppercase }}</h1>
 <table class="table clientTable table-striped table-bordered" cellspacing="0" width="100%">
   <thead class='clientTableHeader' style='text-decoration: underline;'>
     <tr>
