<Tyler> Beginning work on the lists inside phase datatable structure

--- a/src/app/Loader/loader.component.html
+++ b/src/app/Loader/loader.component.html
@@ -1,5 +1,6 @@
 <router-outlet>
-    <div class="loader" *ngIf="showLoader">
+  <div id="test" *ngIf="showLoader">
+    <div class="loader">
         <div></div>
         <div></div>
         <div></div>
@@ -10,4 +11,5 @@
         <div></div>
         <div></div>
       </div>
+    </div>
 </router-outlet>
