--- a/src/app/Returns/campaign-returns/campaign-returns.component.html
+++ b/src/app/Returns/campaign-returns/campaign-returns.component.html
@@ -1,5 +1,5 @@
 <div class="campaigndiv">
-  <table class="table campaignTable table-striped table-bordered" cellspacing="0" width="100%">
+  <table class="campaignTable" cellspacing="0" width="100%">
     <thead class='campaignTableHeader' style='text-decoration: underline;'>
       <tr>
         <th></th>
