--- a/src/app/Returns/mailtype-returns/mailtype-returns.component.html
+++ b/src/app/Returns/mailtype-returns/mailtype-returns.component.html
@@ -1,5 +1,5 @@
 <div class="mailtypediv">
-  <table class="table mailTypeTable table-striped table-bordered" cellspacing="0" width="100%">
+  <table class="mailTypeTable" cellspacing="0" cellpadding="0">
     <thead class='mailTypeTableHeader' style='text-decoration: underline;'>
       <tr>
         <th></th>
