--- a/src/app/Loader/loader.component.css
+++ b/src/app/Loader/loader.component.css
@@ -1,15 +1,24 @@
+#test{
+    margin:0;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    -ms-transform: translate(-30%, -50%);
+    transform: translate(-30%, -50%);
+}
+
 .loader {
     position: relative;
     display: grid;
     grid-template-columns: 33% 33% 33%;
     grid-gap: 2px;
-    width: 100px;
-    height: 100px;
+    width: 60px;
+    height: 60px;
     top:150px;
     margin: 0 auto;
+
 }
 .loader > div {
-    
     position: relative;
     display: inline-block;
     width: 100%;
@@ -17,7 +26,9 @@
     background: #1279C0;
     transform: scale(0);
     transform-origin: center center;
-    animation: loader 1.5s infinite linear;
+    animation: loader 1.25s infinite linear;
+    border-radius:3px;
+
 }
 .loader > div:nth-of-type(1), .loader > div:nth-of-type(5), .loader > div:nth-of-type(9) {
     animation-delay: 0.4s;
