--- a/src/app/internal-home-dashboard/internal-home-dashboard.component.css
+++ b/src/app/internal-home-dashboard/internal-home-dashboard.component.css
@@ -105,13 +105,16 @@ ul.dictionary li {
     width:25em;
     margin-bottom: 5px;
     font-size: 11pt;
-    padding: 5px 0px 5px 5px;
+    padding: 0;
     border-radius:5px;
 }
 
 ul.dictionary > li > a{
     color:#333;
     text-decoration: none;
+    display: block;
+    padding: 5px 0px 5px 5px;
+
 }
 
 ul.dictionary li:hover{
